fixing conflicting class merging